--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ deploy-to-production:
     tags:
       - short-jobs
     only:
-      - '/^v[0-9]*\.[0-9]*\.[0-9]*-?.*$/'
+      - master
     image: markuskeil/docker-and-rancher
     services:
       - docker:dind
