--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-dom": "^16.0.0",
     "react-inlinesvg": "^0.7.4",
     "react-json-tree": "^0.11.0",
+    "react-markdown": "^4.0.9",
     "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.77",
     "react-syntax-highlighter": "^7.0.0",
@@ -80,7 +81,7 @@
     "remix-solidity": "^0.2.11",
     "require-from-string": "^2.0.2",
     "solc": "^0.4.25",
-    "solidity-parser-antlr": "^0.4.2",
+    "solidity-parser-antlr": "^0.4.5",
     "solium": "^1.2.2",
     "solium-plugin-security": "^0.1.1",
     "ts-loader": "^5.3.0",
