--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "remix-solidity": "^0.2.11",
     "require-from-string": "^2.0.2",
     "solc": "^0.4.25",
-    "solidity-parser-antlr": "^0.4.5",
+    "solidity-parser-antlr": "git+https://github.com/federicobond/solidity-parser-antlr.git",
     "solium": "^1.2.2",
     "solium-plugin-security": "^0.1.1",
     "ts-loader": "^5.3.0",
