--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "sd",
-  "version": "1.0.0",
-  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.4.5.",
-  "main": "truffle.js",
+  "name": "piet",
+  "version": "0.0.2",
   "directories": {
     "test": "test"
   },
@@ -17,31 +15,17 @@
     "type": "git",
     "url": "git+https://github.com/slockit/bundesblock-voting.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Heiko Burkhardt",
+  "license": "GPL",
   "bugs": {
     "url": "https://github.com/slockit/bundesblock-voting/issues"
   },
   "homepage": "https://github.com/slockit/bundesblock-voting#readme",
   "devDependencies": {
-    "@types/core-js": "^0.9.43",
-    "awesome-typescript-loader": "^3.5.0",
-    "core-js": "^2.5.1",
-    "node-libs-browser": "^2.1.0",
-    "source-map-loader": "^0.2.3",
-    "tslint": "^5.8.0",
-    "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.6.1",
-    "webpack": "^4.25.1",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  },
-  "dependencies": {
-    "@digix/doxity": "^0.5.2",
     "@types/axios": "^0.14.0",
     "@types/backbone": "^1.3.42",
     "@types/bignumber.js": "^4.0.3",
+    "@types/core-js": "^0.9.43",
     "@types/jquery": "^3.2.17",
     "@types/query-string": "^6.1.1",
     "@types/react": "^16.0.21",
@@ -49,27 +33,29 @@
     "@types/solidity-parser-antlr": "^0.2.1",
     "@types/underscore": "^1.8.5",
     "@types/write-json-file": "^2.2.1",
+    "source-map-loader": "^0.2.3",
+    "tslint": "^5.8.0",
+    "tslint-microsoft-contrib": "^5.0.1",
+    "typescript": "^2.6.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0-beta.3",
+    "brace": "^0.11.1",
     "csv-parse": "^2.2.0",
-    "ethlint": "^1.2.2",
     "file-saver": "^2.0.2",
     "highlight.js": "^9.12.0",
-    "immutability-helper": "^2.6.2",
     "in3": "^1.1.43",
     "jointjs": "^2.2.1",
     "jquery": "^3.3.1",
     "json-format": "^1.0.1",
-    "lodash": "^4.17.4",
-    "mock-fs": "^4.7.0",
-    "moment": "^2.19.4",
-    "npm": "^5.6.0",
+    "popper.js": "^1.15.0",
     "promise-file-reader": "^1.0.0",
     "query-string": "^6.2.0",
     "react": "^16.0.0",
     "react-ace": "^5.9.0",
-    "react-addons-update": "^15.6.2",
-    "react-datetime": "^2.11.1",
     "react-dom": "^16.0.0",
     "react-inlinesvg": "^0.7.4",
     "react-json-tree": "^0.11.0",
@@ -78,13 +64,8 @@
     "react-split-pane": "^0.1.77",
     "react-syntax-highlighter": "^7.0.0",
     "react-treebeard": "^2.1.0",
-    "remix-solidity": "^0.2.11",
-    "require-from-string": "^2.0.2",
-    "solc": "^0.4.25",
     "solidity-parser-antlr": "git+https://github.com/federicobond/solidity-parser-antlr.git",
-    "solium": "^1.2.2",
-    "solium-plugin-security": "^0.1.1",
     "ts-loader": "^5.3.0",
-    "web3": "^1.0.0-beta.37"
+    "web3": "1.0.0-beta.37"
   }
 }
