--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/slockit/bundesblock-voting.git"
+    "url": "git+https://github.com/slockit/piet.git"
   },
   "author": "Heiko Burkhardt",
-  "license": "GPL",
+  "license": "GPL v3.0",
   "bugs": {
-    "url": "https://github.com/slockit/bundesblock-voting/issues"
+    "url": "https://github.com/slockit/piet/issues"
   },
-  "homepage": "https://github.com/slockit/bundesblock-voting#readme",
+  "homepage": "https://github.com/slockit/piet#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/backbone": "^1.3.42",
