--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
     "react-treebeard": "^2.1.0",
     "solidity-parser-antlr": "git+https://github.com/federicobond/solidity-parser-antlr.git",
     "ts-loader": "^5.3.0",
-    "web3": "1.0.0-beta.37"
+    "web3": "1.2.0"
   }
 }
