--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@sentry/browser": "^5.5.0",
     "axios": "^0.18.0",
     "brace": "^0.11.1",
     "csv-parse": "^2.2.0",
