--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,9 @@ deploy-to-production:
       TARGET: production
 
 mirror-to-github:
+    stage: mirror
+    tags:
+      - short-jobs
     only: 
       - master
       - /^v[0-9]+.[0-9]+.[0-9]+$/
