--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - build
   - package
   - deploy
+  - mirror
 
 # Job templates
 ui-build: 
@@ -33,30 +34,51 @@ docker-package:
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME .
-    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME $CI_REGISTRY_IMAGE:latest
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
-    - docker push $CI_REGISTRY_IMAGE:latest
 
-deploy-to-dev:
-    stage: deploy
-    tags:
-      - short-jobs
+.deploy-tmpl:
+  stage: deploy
+  except:
+    - branches
+  tags:
+    - short-jobs
+  image: docker.slock.it/build-images/deployment
+  services:
+    - docker:dind
+  script:
+    - rancher -w up -d --prune -p -s piet-${TARGET} -c --force-upgrade
+    - sentry-cli releases new -p piet piet@${CI_COMMIT_REF_NAME}
+    - sentry-cli releases deploys piet@${CI_COMMIT_REF_NAME} new -e ${TARGET}
+    - sentry-cli releases set-commits --auto piet@${CI_COMMIT_REF_NAME}
+
+deploy-to-stage:
+    extends: .deploy-tmpl
+    dependencies:
+      - docker-package
     only:
-      - develop
-    image: markuskeil/docker-and-rancher
-    services:
-      - docker:dind
-    script:
-      - rancher-compose -p dev-${CI_PROJECT_PATH_SLUG} up -p -d -c --force-upgrade
+      - /^v[0-9]+.[0-9]+.[0-9]+-(alpha|beta|rc)\.[0-9]+$/
+    variables:
+      TARGET: stage
 
 deploy-to-production:
-    stage: deploy
+    extends: .deploy-tmpl
+    dependencies:
+      - docker-package
+    only:
+      - /^v[0-9]+.[0-9]+.[0-9]+$/
+    variables:
+      TARGET: production
+
+mirror-to-github:
+    stage: mirror
     tags:
       - short-jobs
-    only:
+    only: 
       - master
-    image: markuskeil/docker-and-rancher
-    services:
-      - docker:dind
+      - /^v[0-9]+.[0-9]+.[0-9]+$/
     script:
-      - rancher-compose -p $CI_PROJECT_PATH_SLUG up -p -d -c --force-upgrade
+      - chmod 0400 $GITHUB_PUSH_KEY
+      - export GIT_SSH_COMMAND="/usr/bin/ssh -o StrictHostKeyChecking=no -i $GITHUB_PUSH_KEY"
+      - git remote add external git@github.com:slockit/piet.git
+      - git push --force external master
+      - git push --force external --tags 
