--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,6 +80,7 @@ mirror-to-github:
     script:
       - chmod 400 $GITHUB_PUSH_KEY
       - export GIT_SSH_COMMAND="/usr/bin/ssh -o StrictHostKeyChecking=no -i $GITHUB_PUSH_KEY"
+      - git remote rm external || true
       - git remote add external git@github.com:slockit/piet.git
       - git push --force external master
       - git push --force external --tags 
