--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,8 +80,10 @@ mirror-to-github:
     script:
       - chmod 400 $GITHUB_PUSH_KEY
       - export GIT_SSH_COMMAND="/usr/bin/ssh -o StrictHostKeyChecking=no -i $GITHUB_PUSH_KEY"
+      - git branch -D ext-master || true
+      - git checkout -b ext-master
       - git remote rm external || true
       - git remote add external git@github.com:slockit/piet.git
       - git status
-      - git push -u --force external master
+      - git push -u --force external ext-master:master
       - git push --force external --tags 
