--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@types/core-js": "^0.9.43",
     "@types/jquery": "^3.2.17",
     "@types/query-string": "^6.1.1",
-    "@types/react": "^16.0.21",
+    "@types/react": "^16.9.2",
     "@types/react-dom": "^16.0.2",
+    "@types/react-syntax-highlighter": "^11.0.0",
     "@types/solidity-parser-antlr": "^0.2.1",
     "@types/underscore": "^1.8.5",
     "@types/write-json-file": "^2.2.1",
     "source-map-loader": "^0.2.3",
     "tslint": "^5.8.0",
     "tslint-microsoft-contrib": "^5.0.1",
+    "tslint-react-hooks": "^2.2.1",
     "typescript": "^2.6.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
@@ -44,8 +46,10 @@
   "dependencies": {
     "@sentry/browser": "^5.5.0",
     "axios": "^0.18.0",
+    "bignumber.js": "^9.0.0",
     "brace": "^0.11.1",
     "csv-parse": "^2.2.0",
+    "ethereumjs-util": "^6.2.0",
     "file-saver": "^2.0.2",
     "highlight.js": "^9.12.0",
     "in3": "^1.1.43",
@@ -55,18 +59,18 @@
     "popper.js": "^1.15.0",
     "promise-file-reader": "^1.0.0",
     "query-string": "^6.2.0",
-    "react": "^16.0.0",
-    "react-ace": "^5.9.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.9.0",
+    "react-ace": "^7.0.2",
+    "react-dom": "^16.9.0",
     "react-inlinesvg": "^0.7.4",
     "react-json-tree": "^0.11.0",
     "react-markdown": "^4.0.9",
     "react-router-dom": "^4.2.2",
     "react-split-pane": "^0.1.77",
-    "react-syntax-highlighter": "^7.0.0",
+    "react-syntax-highlighter": "^11.0.2",
     "react-treebeard": "^2.1.0",
-    "solidity-parser-antlr": "^0.4.8",
+    "solidity-parser-antlr": "^0.4.11",
     "ts-loader": "^5.3.0",
-    "web3": "1.2.0"
+    "web3": "1.2.6"
   }
 }
