switch to new deployment runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ vulnerabilities:
   except:
     - branches
   tags:
-    - short-jobs
+    - deployment
   image: docker.slock.it/build-images/deployment
   services:
     - docker:dind
